--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<p> Hello world </p>
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Text Editor</title>
+    <link rel="stylesheet" href="typing.css">
+    
+</head>
+<body>    
+    <h1 id="Main_heading">Text Editor</h1> 
+    <div class="store_text"></div> 
+    <input id="Typing_aria" type="text" placeholder="Type Here">
+    <!-- <br> <br><br><br><br> -->
+    <script src="typing.js"></script>
+</body>
+</html>
